--- a/site/about.html
+++ b/site/about.html
@@ -60,24 +60,15 @@
 			
 			<!-- Article main content -->
 			<article class="col-md-8 maincontent">
-				<header class="page-header">
-					<h1 class="page-title">Lorem ipsum dolor sit amet, consectetur.</h1>
-				</header>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, itaque, cumque, maxime obcaecati reprehenderit ea dignissimos amet voluptatem id excepturi facilis totam veritatis maiores eveniet neque explicabo temporibus quisquam in ex ab fugiat ipsa tempore sunt corporis nostrum quam illum!</p>
-				<p>Consectetur cupiditate labore repudiandae beatae nisi fugiat facilis natus illum vitae doloremque. In, perspiciatis, natus, impedit voluptas itaque odio repudiandae placeat nisi totam repellendus earum dolores mollitia tempore quasi beatae alias cum dicta maxime laborum corporis harum porro magnam laboriosam.</p>
-				<p>Aut, eaque, minus atque alias odio mollitia cum nisi ipsa nulla natus quae minima similique ipsam aspernatur molestias animi in deleniti nam. Tempora, labore, modi eum perspiciatis doloremque sequi nam illo corporis iusto maiores nisi recusandae repellat animi reiciendis accusamus.</p>
-
-				<h2>A, quibusdam, nobis, eveniet consequatur</h2>
-				<p>A, quibusdam, nobis, eveniet consequatur alias doloremque officia blanditiis fuga et numquam labore reiciendis voluptas quis repellat quos sunt non dolore consectetur at sit nam tenetur dolorem? Harum, quas, sit perspiciatis esse odit temporibus aperiam nulla aspernatur sequi fugiat tempore?</p>
-				<p>Ad velit consequuntur quo qui odit quam sapiente repudiandae et ea pariatur? Ex sapiente beatae nobis consectetur ea. Deleniti, beatae, magnam, dolorum, fuga nostrum quas laboriosam sapiente temporibus enim voluptates ullam impedit atque quae provident quos mollitia aperiam perferendis amet.</p>
-
-				<blockquote>Numquam, ut iure quia facere totam quas odit illo incidunt. Voluptatem, nostrum, ex, quasi incidunt similique cum maxime expedita unde labore inventore excepturi veniam corporis sequi facere ullam voluptates amet illum quam fuga voluptatibus ipsum atque sunt eos. Ut, necessitatibus.</blockquote>
-				<p>Odit, laudantium, dolores, natus distinctio labore voluptates in inventore quasi qui nobis quis adipisci fugit id! Aliquam alias ea modi. Porro, odio, sed veniam hic numquam qui ad molestiae sint placeat expedita? Perferendis, enim qui numquam sequi obcaecati molestiae fugiat!</p>
-				<p>Aperiam, odit, quasi, voluptate fugiat quisquam velit magni provident corporis animi facilis illo eveniet eum obcaecati adipisci blanditiis quas labore doloribus eos veniam repudiandae suscipit tempora ad harum odio eius distinctio hic deleniti. Sunt fuga ad perspiciatis repellat deleniti omnis!</p>
-
-				<h3>Numquam, ut iure quia facere totam quas odit illo incidunt</h3>
-				<p>Est, maiores, fuga sed nemo qui veritatis ducimus placeat odit quisquam dolorum. Rem, sunt, praesentium veniam maiores quia molestias eos fugit eaque ducimus veritatis provident assumenda. Quia, fuga, voluptates voluptatibus quis enim nam asperiores aliquam dignissimos ullam recusandae debitis iste.</p>
-				<p>Dignissimos, beatae, praesentium illum eos autem perspiciatis? Minus, non, tempore, illo, mollitia exercitationem tempora quas harum odio dolores delectus quidem laudantium adipisci ducimus ullam placeat eaque minima quae iure itaque corporis magni nesciunt eius sed dolor doloremque id quasi nisi.</p>
+				Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur eos temporibus numquam tempore magni tenetur doloribus, aut quod qui ad corrupti ab assumenda, vero obcaecati facilis iste. Nulla, modi animi!
+				Impedit enim natus eius molestiae soluta ut veritatis aut quos cumque, beatae corrupti quasi architecto nemo quidem laboriosam placeat omnis ex assumenda atque eveniet quisquam? Esse rerum eaque voluptas velit!
+				Neque earum ipsum repudiandae maxime optio enim, aperiam debitis sint, labore incidunt repellat commodi beatae odio ex minus iste eius laboriosam quibusdam repellendus deserunt similique? Doloribus omnis nulla veritatis sint.
+				Perferendis vitae odio magni ab at sequi, praesentium enim. Porro laborum incidunt voluptatum aliquid non laudantium blanditiis temporibus repellat, molestias, iusto nulla amet exercitationem corrupti magnam, totam cupiditate voluptates. Quibusdam!
+				Ut ad fugit velit in veniam necessitatibus, beatae ea commodi voluptatibus eaque quisquam enim eligendi maxime libero cum, consequatur suscipit saepe. Quam eligendi ipsam, vel sequi amet quidem unde totam.
+				Quibusdam unde rem quisquam? Maxime excepturi, similique officia inventore ratione blanditiis illo, dolore quisquam ut repellendus eos. Repellat ullam ex eaque rem adipisci dolorum harum qui tempora, molestiae explicabo nesciunt.
+				Tenetur illo asperiores dignissimos velit voluptates ut aliquam architecto nobis quia animi voluptate recusandae, temporibus, a dolorem. Quos iure vitae eius, aut consequuntur animi, consequatur temporibus omnis aperiam exercitationem cum.
+				Omnis accusamus qui illum voluptatem facilis et sed perspiciatis maiores inventore temporibus nihil animi necessitatibus sit ex neque, delectus ratione laborum non nam voluptatibus, rerum iste asperiores? Magnam, voluptas praesentium.
+				Odit nesciunt voluptas quia consequatur possimus enim impedit, aliquam nemo. Magnam nisi sint blanditiis rem eaque voluptate accusantium ipsam nobis delectus sapiente, dicta adipisci perspiciatis repellendus doloremque in nihil sequi?
 			</article>
 			<!-- /Article -->
 			
