--- a/site velo/signin.html
+++ b/site velo/signin.html
@@ -252,7 +252,7 @@
                    </div>
             </div>
             <div class="modal-footer d-flex justify-content-center">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal1">Retour</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
               <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
             </div>
           </div>
