--- a/site velo/index.html
+++ b/site velo/index.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="Sergey Pozhilov (GetTemplate.com)">
-
     <title>Rent a bike - Location vélo </title>
     <script src="https://kit.fontawesome.com/c8975d4899.js"></script>
-    <link rel="shortcut icon" href="assets/images/gt_favicon.png">
+    <link rel="icon" sizes="64x64" href="assets/images/favicon-64.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cuprum|Lobster&display=swap" rel="stylesheet">
@@ -28,8 +26,8 @@
 
             <div id="logo" class="row ml-3">
 
-                <a class="navbar-brand" href="#"><img src="assets/images/logo.png" width="150" height="145"></a>
-                <h1 class="text-success">Rent a bike<h2>
+                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" width="150" height="145"></a>
+                <a href="index.html" style="text-decoration: none;" ><h1 class="text-success" >Rent a bike<h2></a>
 
             </div>
 
@@ -182,7 +180,7 @@
                             <strong>Pro :</strong> À partir de 0,90€ /H </p>
                         <p>
                             <strong>Particulier :</strong> À partir de 0,90€ /H </p>
-                        <a name="" id="" class=" col-10 btn btn-success justify-content-center d-flex align-items-center toto" href="location.html" role="button">Vite, je réserve !</a>
+                        <a name="" id="" class=" col-10 btn btn-success justify-content-center d-flex align-items-center toto" href="signin.html" role="button">Vite, je réserve !</a>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 highlight">
@@ -195,7 +193,7 @@
                         <p> <strong>Particulier :</strong> À partir de 9,90€ /J
                         </p>
 
-                        <a name="" id="" class="col-10   btn btn-success justify-content-center d-flex align-items-center toto" href="location.html" role="button">C'est partis pour la
+                        <a name="" id="" class="col-10   btn btn-success justify-content-center d-flex align-items-center toto" href="signin.html" role="button">C'est partis pour la
                             journnée !</a>
                     </div>
                 </div>
@@ -208,7 +206,7 @@
                             </p>
                             <p> <strong>Particulier :</strong> À partir de 9,90€ /S
                             </p>
-                        <a name="" id="" class=" col-10 btn btn-success d-flex justify-content-center align-items-center toto" href="location.html" role="button">Je reserve malin
+                        <a name="" id="" class=" col-10 btn btn-success d-flex justify-content-center align-items-center toto" href="signin.html" role="button">Je reserve malin
                             <br> ;) </a>
                     </div>
                 </div>
@@ -221,7 +219,7 @@
                             </p>
                             <p> <strong>Particulier :</strong> À partir de 9,90€ /M
                             </p>
-                            <a name="" id="" class="col-10 btn btn-success  justify-content-center d-flex align-items-center toto" href="location.html" role="button">Je reserve
+                            <a name="" id="" class="col-10 btn btn-success  justify-content-center d-flex align-items-center toto" href="signin.html" role="button">Je reserve
                             Ecolo/econo <br>!</a>
                     </div>
                 </div>
@@ -369,7 +367,7 @@
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-                    <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
+                    <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
                 </div>
             </div>
         </div>
@@ -402,7 +400,7 @@
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-                    <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
+                    <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
                 </div>
             </div>
         </div>
