--- a/site velo/signup.html
+++ b/site velo/signup.html
@@ -241,7 +241,7 @@
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-              <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
+              <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-              <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
+              <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
             </div>
           </div>
         </div>
