--- a/site velo/signin.html
+++ b/site velo/signin.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="Sergey Pozhilov (GetTemplate.com)">
     <title>Rent a bike - Location vélo </title>
     <script src="https://kit.fontawesome.com/c8975d4899.js"></script>
     <link rel="icon" sizes="64x64" href="assets/images/favicon-64.png" type="image/png">
@@ -230,7 +229,7 @@
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-              <a type="button" class="btn btn-success" href="location.html" >Louez moi !</a>
+              <a type="button" class="btn btn-success" href="signin.html" >Louez moi !</a>
             </div>
           </div>
         </div>
@@ -259,7 +258,7 @@
             </div>
             <div class="modal-footer d-flex justify-content-center">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-              <a type="button" class="btn btn-success" href="location.html">Louez moi !</a>
+              <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
             </div>
           </div>
         </div>
