--- a/site velo/index.html
+++ b/site velo/index.html
@@ -58,7 +58,7 @@
                                     <a class="nav-link h5 ml-3" href="#" data-toggle="modal"
                                         data-target="#exampleModalScrollable">Vélo classique</a>
                                     <a class="nav-link h5 ml-3" href="#" data-toggle="modal"
-                                        data-target="#exampleModalScrollable1">vélo électrique</a>
+                                        data-target="#exampleModalScrollable1">Vélo électrique</a>
 
                                 </div>
                             </li>
