--- a/site velo/index.html
+++ b/site velo/index.html
@@ -49,7 +49,7 @@
                                         class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item  ">
-                                <a class="nav-link h2" href="location.html">Location</a>
+                                <a class="nav-link h2" href="APP/location.html">Location</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle nav-link h2" data-toggle="dropdown" href="#"
@@ -64,7 +64,7 @@
                             </li>
                         </ul>
                     </div>
-                    <a href="signin.html" type="button" class="btn btn-success">
+                    <a href="APP/signin.html" type="button" class="btn btn-success">
                         <i class="fas fa-user"></i>
                         <span class="sr-only"></span>
                     </a>
@@ -180,7 +180,7 @@
                             <strong>Pro :</strong> À partir de 0,90€ /H </p>
                         <p>
                             <strong>Particulier :</strong> À partir de 0,90€ /H </p>
-                        <a name="" id="" class=" col-10 btn btn-success justify-content-center d-flex align-items-center toto" href="signin.html" role="button">Vite, je réserve !</a>
+                        <a name="" id="" class=" col-10 btn btn-success justify-content-center d-flex align-items-center toto" href="../signin.html" role="button">Vite, je réserve !</a>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 highlight">
@@ -193,7 +193,7 @@
                         <p> <strong>Particulier :</strong> À partir de 9,90€ /J
                         </p>
 
-                        <a name="" id="" class="col-10   btn btn-success justify-content-center d-flex align-items-center toto" href="signin.html" role="button">C'est partis pour la
+                        <a name="" id="" class="col-10   btn btn-success justify-content-center d-flex align-items-center toto" href="APP/signin.html" role="button">C'est partis pour la
                             journnée !</a>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                             </p>
                             <p> <strong>Particulier :</strong> À partir de 9,90€ /S
                             </p>
-                        <a name="" id="" class=" col-10 btn btn-success d-flex justify-content-center align-items-center toto" href="signin.html" role="button">Je reserve malin
+                        <a name="" id="" class=" col-10 btn btn-success d-flex justify-content-center align-items-center toto" href="APP/signin.html" role="button">Je reserve malin
                             <br> ;) </a>
                     </div>
                 </div>
@@ -219,7 +219,7 @@
                             </p>
                             <p> <strong>Particulier :</strong> À partir de 9,90€ /M
                             </p>
-                            <a name="" id="" class="col-10 btn btn-success  justify-content-center d-flex align-items-center toto" href="signin.html" role="button">Je reserve
+                            <a name="" id="" class="col-10 btn btn-success  justify-content-center d-flex align-items-center toto" href="APP/signin.html" role="button">Je reserve
                             Ecolo/econo <br>!</a>
                     </div>
                 </div>
@@ -320,9 +320,9 @@
                         <div class="widget-body">
                             <p class="simplenav">
                                 <a href="#">Accueil</a> |
-                                <a href="location.html">Location</a> |
+                                <a href="APP/location.html">Location</a> |
                                 <a href="#">Vélo</a> |
-                                <b><a href="signup.html">S'inscrire</a></b>
+                                <b><a href="APP/signup.html">S'inscrire</a></b>
                             </p>
                         </div>
                     </div>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-                    <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
+                    <a type="button" class="btn btn-success" href="APP/signin.html">Louez moi !</a>
                 </div>
             </div>
         </div>
@@ -400,7 +400,7 @@
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
-                    <a type="button" class="btn btn-success" href="signin.html">Louez moi !</a>
+                    <a type="button" class="btn btn-success" href="APP/signin.html">Louez moi !</a>
                 </div>
             </div>
         </div>
