--- a/siteVelo/Admin/Articles.html
+++ b/siteVelo/Admin/Articles.html
@@ -180,7 +180,7 @@
 
       <div class="custom-file">
         <input type="file" class="custom-file-input" id="inputGroupFile01">
-        <label class="custom-file-label" name="imageArticle" >Importer une image...</label>
+        <label class="custom-file-label" name="imageArticle" for="inputGroupFile01">Importer une image...</label>
       </div>
 
 
@@ -368,7 +368,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form method="post" action="a">
+          <form method="post" action="PHP/article.php">
             <div class="form-group">
               <label for="text">Nom de l'article :</label>
               <input type="text" class="form-control">
